@@ -51,6 +51,7 @@ CPANPLUS::Internals::Source::SQLite - SQLite implementation
                         { AutoCommit => 1 }
                     );
         #$Dbh->dbh->trace(1);
+        $Dbh->query(qq{PRAGMA synchronous = OFF});
 
         return $Dbh;        
     };
@@ -118,7 +119,7 @@ CPANPLUS::Internals::Source::SQLite - SQLite implementation
     sub _standard_trees_completed   { return $used_old_copy }
     sub _custom_trees_completed     { return }
     ### finish transaction
-    sub _finalize_trees             { $_[0]->__sqlite_dbh->query('COMMIT'); return 1 }
+    sub _finalize_trees             { $_[0]->__sqlite_dbh->commit; return 1 }
 
     ### saves current memory state, but not implemented in sqlite
     sub _save_state                 { 
@@ -155,8 +156,8 @@ CPANPLUS::Internals::Source::SQLite - SQLite implementation
         ### keep counting how many we inserted
         unless( ++$txn_count % TXN_COMMIT ) {
             #warn "Committing transaction $txn_count";
-            $dbh->query('COMMIT') or error( $dbh->error ); # commit previous transaction
-            $dbh->query('BEGIN')  or error( $dbh->error ); # and start a new one
+            $dbh->commit or error( $dbh->error ); # commit previous transaction
+            $dbh->begin_work  or error( $dbh->error ); # and start a new one
         }
         
         $dbh->query( 
@@ -201,8 +202,8 @@ CPANPLUS::Internals::Source::SQLite - SQLite implementation
         ### keep counting how many we inserted
         unless( ++$txn_count % TXN_COMMIT ) {
             #warn "Committing transaction $txn_count";
-            $dbh->query('COMMIT') or error( $dbh->error ); # commit previous transaction
-            $dbh->query('BEGIN')  or error( $dbh->error ); # and start a new one
+            $dbh->commit or error( $dbh->error ); # commit previous transaction
+            $dbh->begin_work  or error( $dbh->error ); # and start a new one
         }
         
         $dbh->query( 
