@@ -1,4 +1,7 @@
 * Corrected spelling mistakes in POD, pointed out by H.Merijn Brand
+* Amend SQLite source engine to set SYNCHRONOUS pragma to OFF
+* Make sure that Selfupdate checks if CPANPLUS::Dist::Build is
+  installed or not and update it if it is. Spotted by Ilmari
 
 Changes for 0.9004      Sat May  8 22:21:04 2010
 ================================================
